// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1rojczd emotion-0"
  />
</DocumentFragment>
`;

exports[`function [returns object] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1y61m6m emotion-0"
  />
</DocumentFragment>
`;

exports[`function [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-49mx7o emotion-0"
  />
</DocumentFragment>
`;

exports[`function 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1pjx8ox emotion-0"
  />
</DocumentFragment>
`;

exports[`object [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`object [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`object [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
  background-color: #000;
}

<div
    class="sh-gc1rre emotion-0"
  />
</DocumentFragment>
`;

exports[`object 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1fdlqmw emotion-0"
  />
</DocumentFragment>
`;

exports[`string [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`string [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`string [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-jv8xlf emotion-0"
  />
</DocumentFragment>
`;

exports[`string 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<div
    class="sh-1nh64sa emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [as prop] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background-color: #000;
}

<span
    class="sh-1bko81 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [css] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-vuzr9q emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [custom component] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<span
    class="sh-1jk49nu emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [falsy] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-1ag12a6 emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> object] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-j0ganl emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> string] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
  background: #000;
}

<div
    class="sh-5ofk0m emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [function -> string] 2`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-5ofk0m emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [nesting] 1`] = `
<DocumentFragment>
  .sh-1iu3jre > .emotion-0 {
  display: none;
}

<div
    class="sh-1lj17gj emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [plain string] 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: blue;
}

<div
    class="sh-1ujecri emotion-0"
  />
</DocumentFragment>
`;

exports[`template literal [with hooks] 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 200px;
  font-size: 1rem;
  color: blue;
}

<div
    class="sh-1ujecri emotion-0"
  />
</DocumentFragment>
`;
